# ALT-F4

./: README.md  tags
camera/: README.md  main.cpp
demo/: CMakeLists.txt  README.md  main.cpp
demo1/: CMakeLists.txt  main.cpp
demo1/src/: blob.cpp  blob.h  frame.cpp  frame.h  global.h  main.cpp  pixel.cpp  pixel.h
demo1/src/pong/: pong.cpp  pong.h
embedded/: README.md  servo_value.c
software/: CMakeLists.txt  README.html  README.md  blobgraph.py  camera_modify.sh
software/490A_Final_Demo/: main.cpp
software/camera/: main.cpp
software/demo1/: CMakeLists.txt
software/demo1/src/: blob.h  frame.h  main.cpp  pixel.cpp
software/demo1/src/pong/: pong.cpp  pong.h
software/demo2/: CMakeLists.txt  README.md
software/demo2/src/: CMakeLists.txt  main.cpp  pixel.cpp
software/demo2/src/pong/: CMakeLists.txt
software/demo3/: dependencies.txt
software/demo3/src/: CMakeLists.txt  frame.hpp  global.hpp  main.cpp  serial.cpp  serial.hpp
software/demo3/src/pong/: CMakeLists.txt
software/resources/: top_level.mmd
software/serial_test/cmake/: Findserial.cmake
software/serial_test/src/: CMakeLists.txt  main.cpp  serial.cpp  serial.hpp
software/src/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  binary_image.cpp  binary_image.hpp  blob.cpp  blob.hpp  camera.cpp  camera.hpp  camera_handler.cpp  camera_handler.hpp  camera_modify.sh  code_to_html.sh  core.cpp  core.hpp  data_frame.cpp  data_frame.hpp  global.hpp  globals.hpp  image.cpp  image.hpp  input_handler.cpp  input_handler.hpp  keyboard_handler.cpp  keyboard_handler.hpp  main.cpp  pixel.hpp  post_process.cpp  post_process.hpp  process.cpp  process.hpp  process_handler.cpp  process_handler.hpp  renderer.cpp  renderer.hpp  serial_handler.cpp  serial_handler.hpp  tuner.cpp  tuner.hpp  tuning.hpp  (+8 more)
software/src/datatypes/: CMakeLists.txt  attribute.hpp  boundary.hpp  color.hpp  core_anchor.hpp  pixel.hpp  pixel_1.hpp  position.hpp
software/src/pong/: pong.cpp  pong.hpp
software/src/reference/: blob.cpp  blob.hpp  frame.cpp  main.cpp  serial.cpp  serial.hpp
software/src/udev/: back  front  left  right  usb-notes
software/src/unused/: serial_handler.cpp  serial_handler.hpp
webcam_test/: CMakeLists.txt  README.md  main.cpp
